--- a/app/views/report/edit.html.erb
+++ b/app/views/report/edit.html.erb
@@ -1,16 +1,16 @@
-<h2>Edit report</h2>
-<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
-  <% if @post.errors.any? %>
-    <% @post.errors.full_messages.each do |msg| %>
+<h2>Изменить отчет</h2>
+<%= form_for :report, url: report_path(@report), method: :patch do |f| %>
+  <% if @report.errors.any? %>
+    <% @report.errors.full_messages.each do |msg| %>
       <div class="alert alert-danger"> <%= msg %> </div>
     <% end %>
   <% end %>
   <p>
-    Title<br>
+    Название<br>
     <%= f.text_field(:title, {:class => 'form-control'}) %>
   </p>
   <p>
-    Description<br>
+    Фулл текст<br>
     <%= f.text_area(:description, {:class => 'form-control'}) %>
   </p>
   <p>
