--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lab6</title>
+  <title>ЛР6</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
   <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css' %>
+  //Использование стандартной библиотеки стилей bootstrap
 
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -14,8 +15,8 @@
 
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <h5 class="my-0 mr-md-auto"><%= link_to "Lab reports", home_path %></h5>
-  <span class="btn btn-outline-primary"><%= link_to "Add new report", new_post_path %></span>
+  <h5 class="my-0 mr-md-auto"><%= link_to "Все отчеты", home_path %></h5>
+  <span class="btn btn-outline-primary"><%= link_to "Добавить новый отчет", new_report_path %></span>
 </div>
 <div class="container">
   <%= yield %>
